<resources>
    <string name="app_name">MediZHN</string>
    <string name="medicines">Φάρμακα</string>
    <string name="referrals">Παραπεμπτικά</string>
    <string name="calendar">Ημερολόγιο</string>
    <string name="pill_remainder">Υπόλοιπο χαπιών</string>
    <string name="title_activity_referrals">referrals</string>
    <string name="logo_description">Το logo της εφαρμογής</string>
    <string name="add_referrals">just a plus button to add referrals</string>
    <string name="from"><u>Από:</u></string>
    <string name="to"><u>Μέχρι:</u></string>
    <string name="button_to_delete_insertion">button to delete insertion</string>
    <string name="new_reminder">Νέα Υπενθύμιση</string>
    <string name="hint_date">01/01/2022</string>
    <string name="time_ex">00:00</string>
    <string name="desc_calendar"><u>Περιγραφή:</u></string>
    <string name="save">Αποθήκευση</string>
    <string name="add_new_med">Προσθήκη Νέου Φαρμάκου</string>
    <string name="choose_med">Επιλογή Φαρμάκου</string>
    <string name="reason_for_med"><u>Λόγος Λήψης</u></string>
    <string name="set_remainder_pills">Ρύθμιση Υπολοίπου Χαπιών</string>
    <string name="med_name"><u>Όνομα Φαρμάκου</u></string>
    <string name="med_left"><u>Αριθμός Υπολειπόμενων Χαπιών</u></string>
    <string name="add_new_ref">Προσθήκη Νέου Παραπεμπτικού</string>
    <string name="write_here">Γράψτε εδώ…</string>
    <string name="pill_num">0</string>
    <string name="time1"><u>Ώρα:</u></string>
    <string name="date1"><u>Ημερομηνία:</u></string>
    <string name="referral_title_name"><u>Τίτλος Παραπεμπτικού:</u></string>
    <string name="success_ref">Το Παραπεμπτικό σας δημιουργήθηκε επιτυχώς!</string>
    <string name="failure_ref">Ουπς! Κάτι πήγε στραβά…</string>
    <string name="success_med">Το Φάρμακό σας προστέθηκε επιτυχώς!</string>
    <string name="text_choose_med"><u>Επιλέξτε το φάρμακό σας:</u></string>
    <string name="success_cal">Η Υπενθύμισή σας προστέθηκε επιτυχώς!</string>
    <string name="success_del">Η διαγραφή σας εκτελέσθηκε επιτυχώς!</string>
    <string name="failure_del">Η διαγραφή σας απέτυχε </string>
    <string name="failure_change">Η αλλαγή υπολειπόμενων δισκίων απέτυχε </string>
    <string name="success_change">Η αλλαγή υπολειπόμενων δισκίων εκτελέσθηκε επιτυχώς!</string>
    <string name="success_remainder">Το Υπόλοιπο των Χαπιών σας ρυθμίστηκε επιτυχώς!</string>
    <string name="change_time">Αλλαγή Ώρας</string>
    <string name="delete_items">delete items</string>
    <string name="info">info</string>
    <string name="reduce_button">reduce button</string>
    <string name="increase_button">increase button</string>
    <string name="add_new_reminder">add new reminder</string>
    <string name="med_info_text">Εδώ βλέπετε τη λίστα με τα φάρμακα που έχετε προσθέσει.\nΠατώντας το εικονίδιο με το + μπορείτε να προσθέσετε στη λίστα σας ένα καινούριο φάρμακο.\nΓια να διαγράψετε ένα φάρμακο από τη λίστα πατήστε πρώτα την αντίστοιχη κάρτα και στη συνέχεια το εικονίδιο με το x.</string>
    <string name="cal_info_text">Εδώ βλέπετε τις υπενθυμίσεις που έχετε προσθέσει.\nΚάνοντας κλικ σε κάποια ημερομηνία του ημερολογλιου μπορείτε να δείτε τις υπενθυμίσεις που έχουν καταχωρηθεί για εκείνη την ημέρα.\nΠατώντας το εικονίδιο με το + μπορείτε να προσθέσετε στη νέα υπενθύμιση.\nΓια να διαγράψετε μία υπενθύμιση πατήστε πρώτα την αντίστοιχη κάρτα και στη συνέχεια το εικονίδιο με το x.\n</string>
    <string name="pill_rem_info_text">Εδώ βλέπετε τη λίστα με τα υπολοιπόμενα δισκία των φαρμάκων που έχετε προσθέσει.\nΠατώντας το εικονίδιο με το + μπορείτε να προσθέσετε στη λίστα σας τα υπολοιπόμενα δισκία ενός καινούριου φάρμακου.\nΓια να διαγράψετε ένα φάρμακο από τη λίστα πατήστε πρώτα την αντίστοιχη κάρτα και στη συνέχεια το εικονίδιο με το x.\nΜπορείτε να αυξήσετε ή να μειώσετε τα υπολοιπόμενα δισκία ενός φαρμάκου πατώντας πρώτα την αντίστοιχη κάρτα και στη συνέχεια το εικονίδιο + ή - που βρίσκονται στην κορυφή της σελίδας.</string>
    <string name="ref_info_text">Εδώ βλέπετε τη λίστα με τα παραπεμπτικά που έχετε προσθέσει.\nΠατώντας το εικονίδιο με το + μπορείτε να προσθέσετε στη λίστα σας νέο παραπεμπτικό.\nΓια να διαγράψετε ένα παραπεμπτικό από τη λίστα πατήστε πρώτα την αντίστοιχη κάρτα και στη συνέχεια το εικονίδιο με το x.</string>
</resources>