<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Set_Calendar">

    <TextView
        android:id="@+id/title_reminder_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/new_reminder"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_day_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="left"
        android:text="@string/date1" />

    <EditText
        android:id="@+id/edittext_date_reminder"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:hint="@string/hint_date"
        />

    <TextView
        android:id="@+id/text_time_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="left"
        android:text="@string/time1" />

    <TextView
        android:id="@+id/text_time_reminder_show"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/time_ex"
        android:textAlignment="center"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_change_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/change_time"
        android:onClick="ButtonAlarmClock"
        />

    <TextView
        android:id="@+id/text_description_rem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="left"
        android:text="@string/desc_calendar" />
    <EditText
        android:id="@+id/edittext_description_reminder"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="text"
        android:gravity="center"
        android:hint="@string/write_here"
        app:layout_constraintTop_toBottomOf="@+id/title_reminder_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/button_save_calendar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:onClick="newCalendarEntry"
            android:text="@string/save"
            android:textAllCaps="false"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>


</TableLayout>