<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Set_Referral">

    <TextView
        android:id="@+id/title_referral_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/add_new_ref"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_title_of_referral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"
        android:text="@string/referral_title_name" />

    <EditText
        android:id="@+id/title_of_new_referral"
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:gravity="center"
        android:hint="@string/write_here"
        app:layout_constraintTop_toBottomOf="@+id/title_calendar_fragment" />

    <TextView
        android:id="@+id/text_from_referral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="30dp"
        android:text="@string/from" />

    <EditText
        android:id="@+id/edittext_from_referral"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_date"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/text_to_referral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="30dp"
        android:text="@string/to" />

    <EditText
        android:id="@+id/edittext_to_referrals"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:hint="@string/hint_date"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/button_save_referral"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:onClick="newReferral"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>

</TableLayout>