<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Set_Remainder">


    <TextView
        android:id="@+id/title_pill_remainder_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/set_remainder_pills"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_name_of_pill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"
        android:text="@string/med_name"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/eddittext_name_of_pill"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/write_here"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_number_of_remaining_pills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"
        android:text="@string/med_left" />

    <EditText
        android:id="@+id/number_of_remaining_pills"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/pill_num"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/button_save_remainder"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:onClick="newRemainder"
            android:text="@string/save"
            android:textAllCaps="false"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

</TableLayout>