<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Set_Medicine">

    <TextView
        android:id="@+id/title_medicine_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/add_new_med"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_choose_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"
        android:text="@string/text_choose_med"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/button_choose_medicine"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/write_here"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/text_reason_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="30dp"
        android:text="@string/reason_for_med"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/edittext_reason_medicine"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:gravity="center"
        android:hint="@string/write_here"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/button_save_medicine"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:onClick="newMedicine"
            android:text="@string/save"
            android:textAllCaps="false"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

</TableLayout>