<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PillRemainder">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_pills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:clickable="true"
        android:contentDescription="@string/add_referrals"
        android:focusable="true"
        android:onClick="goToSetRemainder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/pill_remainder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pill_remainder"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/info_button_rem"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pill_remainder_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pill_remainder_title" />

    <ImageView
        android:id="@+id/delete_rem"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:contentDescription="@string/delete_items"
        app:layout_constraintBottom_toTopOf="@+id/pill_remainder_layout"
        app:layout_constraintEnd_toStartOf="@+id/info_button_rem"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toEndOf="@+id/pill_remainder_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:id="@+id/info_button_rem"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/info"
        android:onClick="openRem"
        app:layout_constraintBottom_toTopOf="@id/pill_remainder_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageView
        android:id="@+id/reduce_pills"
        android:layout_width="30dp"
        android:layout_height="39dp"
        android:contentDescription="@string/reduce_button"
        app:layout_constraintBottom_toTopOf="@+id/pill_remainder_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pill_remainder_title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/bottom_bar"
        app:tint="@color/primaryLightColor" />

    <ImageView
        android:id="@+id/increase_pills"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:contentDescription="@string/increase_button"
        app:layout_constraintBottom_toTopOf="@+id/pill_remainder_layout"
        app:layout_constraintEnd_toStartOf="@+id/reduce_pills"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pill_remainder_title"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/secondaryColor" />


</androidx.constraintlayout.widget.ConstraintLayout>