<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Referrals">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_referrals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/add_referrals"
        android:onClick="goToSet_Referrals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/referrals_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/referrals"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/info_button_ref"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/referrals_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referrals_title" />

    <ImageView
        android:id="@+id/delete_ref"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/delete_items"
        app:layout_constraintBottom_toTopOf="@+id/referrals_layout"
        app:layout_constraintEnd_toStartOf="@+id/info_button_ref"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/referrals_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:id="@+id/info_button_ref"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/info"
        android:onClick="openRef"
        app:layout_constraintBottom_toTopOf="@id/referrals_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@android:drawable/ic_menu_info_details" />


</androidx.constraintlayout.widget.ConstraintLayout>